apps/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  labels:
    app.kubernetes.io/name: coder
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.kennyandries.com
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: coder.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
